健康小程序

--- a/xcx/Healthy/project.config.json
+++ b/xcx/Healthy/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.98",
 	"appid": "wx95a40afdca5c3276",
-	"projectname": "test",
+	"projectname": "Healthy",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
